# colonizer

./: .gitignore  CMakeLists.txt  Colonizer.cpp  Colonizer.h  main.cpp
Data/Assets/: Tree.mtl  adam2 animations.gltf  adam2.glb  astronaut animated.gltf  tuftGrass.mtl
Data/Assets/Blueprints/: character.txt  tuftGrass.txt
Data/Assets/ShadersGL/: TerrainFragmentShader.glsl  WaterFragmentShader.glsl
blender/: Bee.blend  Bee.mtl  adam.blend  adam2 animations.blend  adam2 no skeleton.blend  adam2.blend  astronaut animated.blend  astronaut skinned.blend  astronaut-front.xcf  astronaut-side.xcf  astronaut.blend  tuftGrass.blend
